# AIStockeManager

./: .dockerignore  .gitignore  AGENTS.md  ARCH_ACCEPTANCE.md  Dockerfile  Makefile  README.MD  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
app/api/: graph_api.py
app/core/context_pack/: __init__.py  hub_generator.py  why_cache.py
app/data/: sp100_universe.json
app/ui/: streamlit_app.py  theme.py
docs/: DRL_SPEC_REPORT.md
scripts/: build_context_pack.py  build_context_pack_with_hub.py  hub_verify.py  llm_smoke_check.py  prewarm_worker.py  print_drl_trace.py  replay_check.py  run_all_checks.sh  run_mcp_server.sh  run_streamlit.sh  snapshot_batch.py  verify_drl_integrity.py  verify_hub_integrity.py
tests/: test_brain_badges_contract.py  test_brain_contract.py  test_brain_market_vm.py  test_cache_ttl.py  test_chart_fetcher.py  test_context_pack_schema.py  test_degraded_badge_rules.py  test_drl_fixtures.py  test_drl_invariants.py  test_formatting.py  test_graph_api.py  test_horizon_movers.py  test_hub_card_schema_strict.py  test_hub_card_validation.py  test_hub_generation_contract.py  test_hub_integrity.py  test_mcp_tools_smoke.py  test_portfolio_store.py  test_prewarm_scheduler.py  test_price_sanity.py  test_pulse_badges.py  test_pulse_brain_price_consistency.py  test_pulse_brain_quote_consistency.py  test_query_contracts.py  test_query_graph_contract.py  test_quote_math.py  test_quote_provider.py  test_quote_snapshot_math.py  test_replay_artifacts.py  test_series_normalize.py  test_ui_contract.py  test_ui_utils.py  test_why_cache.py
(+58 files in other folders)
